Removed metadata and cleaned project